--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
     vertical-align:middle;
 }
 
-body, html {
-    margin-left:3%;
-    margin-right:3%;
 
-}
 	hr { display: block; height: 1px;
     border: 0; border-top: 1px solid #f1f1f1;
     margin: 1em 0; padding-bottom: 10px; }
@@ -55,6 +51,12 @@ a:visited {
 }
 	a:hover {
   color: #FF2B71;
+}
+body {
+	margin-left: 0px;
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
 }
 </style>
 </head>
