--- a/index.html
+++ b/index.html
@@ -2,98 +2,102 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Rupesh Kumar | UX Lead</title>
-	<script src="https://unpkg.com/feather-icons"></script>
-<link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Rubik&display=swap" rel="stylesheet">	<style>
+<title>Rupesh</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+    p {
+    padding-bottom: 20px;
+}
+       a:link {
+           color: white;
+            opacity: 50%;
+  text-decoration: none;
+}
+        a:visited { 
+  color: white;
+}
+        a:hover {
+  color: white;
+                       opacity: 100%;
+transition: 0.3s;
+}
+        a:active {
+  color: white;
+}
+	.parent {
+        width:100%;
+  height:100vh;
+animation: myanimation 10s infinite;
+}
+    .main {
+width: 420px;
+         position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+        animation: myanimation 10s infinite;
+}
+     .divider{
+        background: #fff;
+width: 100%;
+height: .5em;
+        margin: 0.5em 0 2em;}
+h1 {
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-size: 75px;
+            font-weight: 600;
+    margin: auto;
+    color: white;
+    padding-bottom: 35px;
+}
+    .messages2 {
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-size: 24px;
+        font-weight: 200;
+    margin: auto;
+  color: white;
+        line-height: 36px;
 
-		.barlow{
-			font-family: 'Barlow Condensed', sans-serif;
-			    vertical-align:middle;
-						    font-size: 50px;
-
-
-		}.barlow2{
-			font-family: 'Barlow Condensed', sans-serif;
-			    vertical-align:middle;
-						    font-size: 30px;
-
-
-		}
-		.rubik{
-			font-family: 'Rubik', sans-serif;
-			    vertical-align:middle;
-
-
-
-	}
-		.pad1{
-		padding-bottom: 35px;
-			padding-top: 35px;
-
-
-
-	}
-.nav-text {
-    vertical-align:middle;
+}
+   .divider {
+  background: #fff;
+  width: 100%;
+  height: .5em;
+  margin: 0.5em 0 2em;
+}.social-media-list {
+    list-style: none;
+}
+    .social-media-list li {
+    display: inline-block;
+    margin-right: 1em;
+    font-size: 180%;
+}
+    .social-media-list li a {
+    color: #888;
+    transition: color 0.5s;
 }
 
+@keyframes myanimation {
+  0% {background-color: #DE004A;}
+  25%{background-color:#DE0072;}
+  50%{background-color:#A71E70;}
+  75%{background-color:#DE0072;}
+  100% {background-color: #DE004A;}
+    p {
+ text-align: center;
+line-height: 100px;
 
-	hr { display: block; height: 1px;
-    border: 0; border-top: 1px solid #f1f1f1;
-    margin: 1em 0; padding-bottom: 10px; }
-	
-	a {
-   color: #DE004A;
-		text-decoration: none;
 }
-a:visited {
-   color: #DE004A;
-}
-	a:hover {
-  color: #FF2B71;
-}
-body {
-	margin-left: 0px;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
 }
 </style>
 </head>
 
-<body><div align="center" class="barlow">RUPESH<span style=" color: #929292">&nbsp;KUMAR</span><span style=" color: #DE004A" class="barlow2">&nbsp;&nbsp;&nbsp;UX LEAD</span></div>
-	<div align="center" style="padding-bottom:20px"></div><div align="center"  class="rubik"><i class="nav-text" data-feather="phone"></i>&nbsp;&nbsp;&nbsp;<span class="rubik" ><a href="tel:+6598576957">+65 9857 6957</a></span> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<i class="nav-text" data-feather="mail"></i><span class="rubik"><a href="mailto:viscom.rupesh@gmail.com">&nbsp;&nbsp;&nbsp;viscom.rupesh@gmail.com </a></span>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;  <i class="nav-text" data-feather="file"></i>&nbsp;&nbsp;&nbsp;<span class="rubik"><a href="resume.pdf">Download resume</a></span></div>
-	<hr>	
-	<div align="center">
-	<div align="center">
-	<div class="pad1"><img src="images/srx_app.png" width="1107" height="647" alt=""/></div>
-	<div class="pad1"><img src="images/srx_web.png" width="1107" height="863" alt=""/></div>
-	<div class="pad1"><a href="http://srx.com.sg" target="_blank" class="rubik">www.srx.com.sg </a></div>
-	<div class="pad1"><a href="http://itunes.apple.com/us/app/srx/id881817538?mt=8" target="_blank" ><img src="images/app-store@2x.png" width="154" height="46" alt=""/></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://play.google.com/store/apps/details?id=sg.com.srx
-"target="_blank" ><img src="images/google-play@2x.png" width="154" height="46" alt=""/></a></div>
-	<div class="pad1"><img src="images/bg.png" width="1920" height="858" alt=""/></div>
-	<div class="pad1"><img src="images/Flare@2x.png" width="745" height="473" alt=""/></div>
-	<div class="pad1"><img src="images/Flavours 1@2x.png" width="746" height="476" alt=""/></div>
-<div class="pad1"><img src="images/Flavours 2@2x.png" width="737" height="432" alt=""/></div>
-	<div class="pad1"><img src="images/NSmark@2x.png" width="735" height="733" alt=""/></div>
-	<div class="pad1"><img src="images/Capitaland@2x.png" width="739" height="417" alt=""/></div>
-	<div class="pad1"><img src="images/Anantha@2x.png" width="741" height="533" alt=""/></div>
-	<div class="pad1"><img src="images/Swissriches@2x.png" width="739" height="234" alt=""/></div>
-	<div class="pad1"><img src="images/Diamondpeak@2x.png" width="739" height="234" alt=""/></div>
-	<div class="pad1"><img src="images/Golden8@2x.png" width="739" height="234" alt=""/></div>
-	<div class="pad1"><img src="images/Mustang@2x.png" width="739" height="234" alt=""/></div>
-	<div class="pad1"><img src="images/Twitter@2x.png" width="403" height="309" alt=""/></div>
-	<div class="pad1"><img src="images/Passion@2x.png" width="343" height="239" alt=""/></div>
-<div class="pad1"><img src="images/Koolkases@2x.png" width="334" height="230" alt=""/></div>
-	
+<body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+    
+    
+<div class="parent"><div class="main"><h1>Hello!<br>My name is <br>Rupesh.</h1> 
+    <p class="messages2">I’m a Lead UX Designer at Streetsine Technology Group, a subsidiary of <a href="https://www.sph.com.sg" target="_blank">SPH</a>, Asia’s leading media organisation. </p> <p class="messages2">I currently design products for <a href="https://www.srx.com.sg" target="_blank">SRX</a>. Some of my works are listed <a href="portfolio.html" target="_blank">here.</a> Download my <a href="resume.pdf" target="_blank">resume</a> to know more about my background and experience.</p><div class="divider"></div><a style="padding-right:25px;" href='#'><i class="fa fa-twitter" style="font-size:26px;color:white;"></i></a><a style="padding-right:25px;" href='#'><i class="fa fa-facebook" style="font-size:26px;color:white;"></i></a><a style="padding-right:25px;" href='#'><i class="fa fa-linkedin" style="font-size:26px;color:white;"></i></a><a style="padding-right:25px;" href='#'><i class="fa fa-skype" style="font-size:26px;color:white;"></i></a></div></div>
 
-	<div class="pad1"><img src="images/Leadership@2x.png" width="337" height="208" alt=""/></div>
-	<hr>
-	<div class="rubik"><i class="nav-text" data-feather="phone"></i>&nbsp;&nbsp;&nbsp;<span class="nav-text" ><a href="tel:+6598576957">+65 9857 6957</a></span> &nbsp;&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<i class="nav-text" data-feather="mail"></i><a href="mailto:viscom.rupesh@gmail.com">&nbsp;&nbsp;&nbsp;viscom.rupesh@gmail.com </a>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;  <i class="nav-text" data-feather="file"></i>&nbsp;&nbsp;&nbsp;<a href="resume.pdf">Download resume</a></div>
-</div><div  class="pad1"> </div>
-	<script>
-      feather.replace()
-    </script>
-	</div>
 </body>
 </html>
