--- a/index.html
+++ b/index.html
@@ -7,75 +7,59 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
     p {
-    padding-bottom: 20px;
+        padding-bottom: 20px;
 }
-       a:link {
-           color: white;
-            opacity: 50%;
-  text-decoration: none;
+    a:link {
+        color: white;        
+        opacity: 50%;
+        text-decoration: none;
 }
-        a:visited { 
-  color: white;
+    a:visited { 
+        color: white;
 }
-        a:hover {
-  color: white;
-                       opacity: 100%;
-transition: 0.3s;
+    a:hover {
+        color: white;
+        opacity: 100%;
+        transition: 0.3s;
 }
-        a:active {
-  color: white;
+    a:active {
+        color: white;
 }
-	.parent {
+	
+    .parent {
         width:100%;
-  height:100vh;
-animation: myanimation 10s infinite;
+        height:100vh;
+        animation: myanimation 10s infinite;
 }
     .main {
-width: 420px;
-         position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+        width: 420px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         animation: myanimation 10s infinite;
 }
      .divider{
         background: #fff;
-width: 100%;
-height: .5em;
+        width: 100%;
+        height: .5em;
         margin: 0.5em 0 2em;}
 h1 {
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     font-size: 75px;
-            font-weight: 600;
+    font-weight: 600;
     margin: auto;
     color: white;
     padding-bottom: 35px;
 }
-    .messages2 {
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-    font-size: 24px;
+    .bodytext {
+        font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+        font-size: 24px;
         font-weight: 200;
-    margin: auto;
-  color: white;
+        margin: auto;
+        color: white;
         line-height: 36px;
 
-}
-   .divider {
-  background: #fff;
-  width: 100%;
-  height: .5em;
-  margin: 0.5em 0 2em;
-}.social-media-list {
-    list-style: none;
-}
-    .social-media-list li {
-    display: inline-block;
-    margin-right: 1em;
-    font-size: 180%;
-}
-    .social-media-list li a {
-    color: #888;
-    transition: color 0.5s;
 }
 
 @keyframes myanimation {
@@ -84,11 +68,7 @@ h1 {
   50%{background-color:#A71E70;}
   75%{background-color:#DE0072;}
   100% {background-color: #DE004A;}
-    p {
- text-align: center;
-line-height: 100px;
 
-}
 }
 </style>
 </head>
@@ -97,7 +77,7 @@ line-height: 100px;
     
     
 <div class="parent"><div class="main"><h1>Hello!<br>My name is <br>Rupesh.</h1> 
-    <p class="messages2">I’m a Lead UX Designer at Streetsine Technology Group, a subsidiary of <a href="https://www.sph.com.sg" target="_blank">SPH</a>, Asia’s leading media organisation. </p> <p class="messages2">I currently design products for <a href="https://www.srx.com.sg" target="_blank">SRX</a>. Some of my works are listed <a href="portfolio.html" target="_blank">here.</a> Download my <a href="resume.pdf" target="_blank">resume</a> to know more about my background and experience.</p><div class="divider"></div><a style="padding-right:25px;" href='#'><i class="fa fa-twitter" style="font-size:26px;color:white;"></i></a><a style="padding-right:25px;" href='#'><i class="fa fa-facebook" style="font-size:26px;color:white;"></i></a><a style="padding-right:25px;" href='#'><i class="fa fa-linkedin" style="font-size:26px;color:white;"></i></a><a style="padding-right:25px;" href='#'><i class="fa fa-skype" style="font-size:26px;color:white;"></i></a></div></div>
+    <p class="bodytext">I’m a Lead UX Designer at Streetsine Technology Group, a subsidiary of <a href="https://www.sph.com.sg" target="_blank" style="font-weight:300">SPH</a>, Asia’s leading media organisation. </p> <p class="bodytext">I currently design products for <a href="https://www.srx.com.sg" target="_blank" style="font-weight:300">SRX</a>. Some of my works are listed <a href="portfolio.html" target="_blank" style="font-weight:300">here.</a> Download my <a href="resume.pdf" target="_blank" style="font-weight:300">resume</a> to know more about my background and experience.</p><div class="divider"></div><a style="padding-right:25px;" href='#'><i class="fa fa-twitter" style="font-size:26px;color:white;"></i></a><a style="padding-right:25px;" href='#'><i class="fa fa-facebook" style="font-size:26px;color:white;"></i></a><a style="padding-right:25px;" href='#'><i class="fa fa-linkedin" style="font-size:26px;color:white;"></i></a><a style="padding-right:25px;" href='#'><i class="fa fa-skype" style="font-size:26px;color:white;"></i></a></div></div>
 
 </body>
 </html>
