--- a/desi.html
+++ b/desi.html
@@ -7,29 +7,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
     <form 
     action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdCGWcTA6G1OQ6ZMI22t0gyrp1iA8YZeM3lGNbjT7hWMXNKfg/formResponse" method="post">
-        <h1>Desifaves</h1>
+    <div class=“logo”>
+        <img src= "Desifaves_logo.png" width="250" height="122"></div>
+        </div><h1>Please enter your details to process</h1>
 
         <div class="form-element">
             <input type="text" name="entry.2005620554" placeholder="Name">
+        </div>
+        <div class="form-element">
+            <input type="text" name="entry.1166974658" placeholder="Mobile number">
         </div>
         <div class="form-element">
             <input type="text" name="entry.1028988059" placeholder="Address">
         </div>
 
         <div class="form-element">
-            <input type="text" name="entry.788745619" placeholder="#floor-unit">
+            <input type="text" name="entry.788745619" placeholder="#floor-unit no.(if not applicable enter #01-01)">
         </div>
         <div class="form-element">
             <input type="text" name="entry.1065046570" placeholder="Postal code">
         </div>
        
+    
         <div class="form-element">
-            <input type="text" name="entry.1166974658" placeholder="Mobile number">
-        </div>
-        <div class="form-element">
-            <textarea name="entry.202050031" id="" cols="38" rows="5" placeholder="Add notes if any"></textarea>
+            <textarea name="entry.202050031" id="" cols="38" rows="2" placeholder="Add notes if any"></textarea>
         </div>
         <button type="submit">Submit details</button>
     </form>
